優化iswp及信卡功能

--- a/button.css
+++ b/button.css
@@ -11,6 +11,10 @@ button {
     width: 15%;
     margin: 0px;
 }
+.button18{
+    width: 18%;
+    margin: 0px;
+}
 .button20{
     width: 18%;
     margin: 0px;
