--- a/button.css
+++ b/button.css
@@ -1,3 +1,6 @@
+body{
+    width: 260px;
+}
 button {
     height: 30px;
     width: 200px;
@@ -7,6 +10,13 @@ button {
     border-radius: 2px;
 }
 
+.wi250{
+    width: 250px;
+}
+.button10{
+    width: 10%;
+    margin: 0px;
+}
 .button15{
     width: 15%;
     margin: 0px;
@@ -31,6 +41,9 @@ button {
 .button50{
     width: 47%;
     margin: 0px;
+}
+.marleft2{
+    margin-left: 2px;
 }
 .marleft5{
     margin-left: 7px;
